# NeuralShell

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .lighthouserc.mobile.json  .npmrc  .release-local-drift  AI_HANDOFF.md  ANDROID_PLATFORM_ASSESSMENT.md  ARCHITECTURE_RISKS.md  ARCHITECTURE_RULES.md  AUTONOMOUS-COMPLETE.md  BUSINESS_PLAN_NeuralShell.md  CHANGELOG.md  CODEX_NEURALSHELL_AGENT_HANDOFF.md  CONTAINERIZATION_GUIDE.md  CONTRIBUTING.md  CROSS_PLATFORM_HARDENING_v2.1.29.md  Cargo.toml  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOY_HANDOFF.md  DOCTRINE.md  Dockerfile  EXPECTED_DETERMINISM_HASH.json  FINAL_HANDOFF.md  FINAL_HANDOFF_STATUS.md  FINAL_STATUS.md  GA_KNOWLEDGE_INDEX.md  GETTING_STARTED.md  HARD_PROOF_V2.1.29_EVIDENCE_LOG.md  HARD_PROOF_v1.0.0-OMEGA.md  INSTALL.md  INTELLIGENCE-LAYER-PHASE1-COMPLETE.md  IPC_CONTRACT.md  KEY_POLICY.md  LICENSE  MANUAL_VALIDATION_CHECKLIST.md  (+124 more)
.githooks/: pre-push
.github/: CODEOWNERS
NeuralShell_Desktop/: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  certificate-pins.json  main.js  main_kernel.js  package-lock.json  package.json  preload.js  seal.manifest.json  seal.manifest.sig  tear-runtime.js
OMEGA_Verifier_v1.0.0/: README_verification.md  expected_root_fingerprint.txt  verify_external_proof.js
airgap/: airgapBundle.ts
appliance/: README.md
artifacts/: local-smoke-report.json  master-proof-runtime.json
assets/: icon.icns
auto_update/: dryrun.cjs  (+1 more)
tools/rust/neuralshell-release/: Cargo.toml  README.md
tools/rust/neuralshell-release/src/: main.rs
(+1883 files in other folders)
